--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                 <p id="result">È uscito: </p>
             </div>
         </div>
-        <div class="row-dado">
+        <!-- <div class="row-dado">
             <div class="col-12">
                 <button id="dado-2" onclick="lanciaDado()">lancia</button>
                 <p id="result">È uscito: </p>
             </div>
-        </div>
+        </div> -->
 
     </div>
     <script src="script.js"></script>
