--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -13,10 +14,16 @@
     <div class="container">
         <div class="row-giocatori" id="player">
             <div class="col-6">
-                <div class="square" id="player-uno"><h2>Player Uno</h2></div>
+                <div id="player-uno"><h2>Player Uno</h2><img src="./img/pedina_rossa_nobg.png" alt="player-uno"></div>
             </div>
             <div class="col-6">
-                <div class="square" id="player-due"><h2>Player Due</h2></div>
+                <div id="player-due"><h2>Player Due</h2><img src="./img/pedina_blu_nobg.png" alt="player-due"></div>
+            </div>
+        </div>
+        <div class="row-dado">
+            <div class="col-12">
+                <button id="dado" onclick="lanciaDado()">lancia</button>
+                <p id="result">È uscito: </p>
             </div>
         </div>
         <h2 id="turno"></h2>
@@ -102,18 +109,24 @@
             <div class="col-2-orrizontale" id="sessantatre"><p class="numero-casella">63</p></div>
 
         </div>
-        <div class="row-dado">
+        <!-- <div class="row-dado">
             <div class="col-12">
                 <button id="dado" onclick="lanciaDado()">lancia</button>
                 <p id="result">È uscito: </p>
             </div>
-        </div>
-        <!-- <div class="row-dado">
-            <div class="col-12">
-                <button id="dado-2" onclick="lanciaDado()">lancia</button>
-                <p id="result">È uscito: </p>
-            </div>
         </div> -->
+        <div class="row-dado">
+            <div class="col-12">
+                <ul>
+                    <li><h2>caselle speciali:</h2></li>
+                    <li>stop un turno: 10, 25, 54 </li>
+                    <li>stop due turni: 35, 55 </li>
+                    <li>ritira: 9, 27, 45 </li>
+                    <li></li>
+                    <li></li>
+                </ul>>
+            </div>
+        </div>
 
     </div>
     <script src="script.js"></script>
