--- a/index.html
+++ b/index.html
@@ -136,20 +136,53 @@
                 <div class="header-modal">
                     <div class="close"  onclick="closeModal()"><i class="fa-solid fa-xmark"></i></div>
                 </div>
-                <div class="body-modal">
-                    <!-- <h3 id="result">È uscito: </h3> -->
+                <div class="penalità-promozioni">
                     <h4 id="stop"></h4>
                     <h4 id="stop-due"></h4>
                     <h4 id="rilancia"></h4>
-                    <div id="dice" onclick="rotateDice()" >
-                        <div class="front background-face"></div>
-                        <div class="back background-face"></div>
-                        <div class="top background-face"></div>
-                        <div class="left background-face"></div>
-                        <div class="right background-face"></div>
-                        <div class="bottom background-face"></div>
+
+                </div>
+                <div class="body-modal">
+                    <!-- <h3 id="result">È uscito: </h3> -->
+                    <div class="container-dice">
+
+                        <div id="dice" onclick="rotateDice()" class="test" >
+                            <div class="front face background-face">
+                                <span class="punto punto-1"></span>
+                            </div>
+                            <div class="back face background-face">
+                                <span class="punto punto-1"></span>
+                                <span class="punto punto-2"></span>
+                            </div>
+                            <div class="top face background-face">
+                                <span class="punto punto-1"></span>
+                                <span class="punto punto-2"></span>
+                                <span class="punto punto-3"></span>
+                            </div>
+                            <div class="left face background-face">
+                                <span class="punto punto-1"></span>
+                                <span class="punto punto-2"></span>
+                                <span class="punto punto-3"></span>
+                                <span class="punto punto-4"></span>
+                            </div>
+                            <div class="right face background-face">
+                                <span class="punto punto-1"></span>
+                                <span class="punto punto-2"></span>
+                                <span class="punto punto-3"></span>
+                                <span class="punto punto-4"></span>
+                                <span class="punto punto-5"></span>
+                            </div>
+                            <div class="bottom face background-face">
+                                <span class="punto punto-1"></span>
+                                <span class="punto punto-2"></span>
+                                <span class="punto punto-3"></span>
+                                <span class="punto punto-4"></span>
+                                <span class="punto punto-5"></span>
+                                <span class="punto punto-6"></span>
+                            </div>
+                        </div>
+                        <h4 id="result"></h4>
                     </div>
-                    <h3 id="result"></h3>
                 </div>
             </div>
         </div>
