risolto problema return-to

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                     <li><span class="testo-speciale">Stop un turno:</span> <span class="numeri-speciali">10 | 25 | 54</span></li>
                     <li><span class="testo-speciale">Stop due turni:</span> <span class="numeri-speciali">35 | 55</span></li>
                     <li><span class="testo-speciale">Ritira:</span><span class="numeri-speciali"> 9 | 27 | 45</span> </li>
+                    <li><span class="testo-speciale">Vai avanti: </span><span class="numeri-speciali"> 5 | 29 | 49</span> </li>
+                    <li><span class="testo-speciale">Torna indietro:</span><span class="numeri-speciali"> 20 | 60 </span> </li>
                     <li></li>
                     <li></li>
                 </ul>
