edit stop 4 and 6

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                     <li><span class="testo-speciale">Ritira:</span><span class="numeri-speciali"> 9 | 27 | 45</span> </li>
                     <li><span class="testo-speciale">Vai avanti: </span><span class="numeri-speciali"> 5 | 29 | 49</span> </li>
                     <li><span class="testo-speciale">Torna indietro:</span><span class="numeri-speciali"> 20 | 60 </span> </li>
-                    <li></li>
-                    <li></li>
+                    <li><span class="testo-speciale">Stop, esci con un 4 o 6:</span><span class="numeri-speciali"> 16 | 40 | 57 </span></li>
                 </ul>
             </div>
         </div>
